// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Routes /> Should render page when user profil is authorized, role: , name: Samuel, route: / 1`] = `
<DocumentFragment>
  <div>
    SlashDesignSystemCmpt
  </div>
</DocumentFragment>
`;

exports[`<Routes /> Should render page when user profil is authorized, role: , name: Samuel, route: /dashboard 1`] = `
<DocumentFragment>
  <div>
    DashboardCmpt
  </div>
</DocumentFragment>
`;

exports[`<Routes /> Should render page when user profil is authorized, role: , name: Samuel, route: /demos/button 1`] = `
<DocumentFragment>
  <div>
    ButtonCmpt
  </div>
</DocumentFragment>
`;

exports[`<Routes /> Should render page when user profil is authorized, role: , name: Samuel, route: /demos/modal 1`] = `
<DocumentFragment>
  <div>
    ModalCmpt
  </div>
</DocumentFragment>
`;

exports[`<Routes /> Should render page when user profil is authorized, role: , name: Samuel, route: /forbidden 1`] = `
<DocumentFragment>
  <div>
    PageUnauthorizeCmpt
  </div>
</DocumentFragment>
`;

exports[`<Routes /> Should render page when user profil is authorized, role: , name: Samuel, route: /members 1`] = `
<DocumentFragment>
  <div>
    MembersCmpt
  </div>
</DocumentFragment>
`;

exports[`<Routes /> Should render page when user profil is authorized, role: , name: Samuel, route: /search-members 1`] = `
<DocumentFragment>
  <div>
    SearchMembersCmpt
  </div>
</DocumentFragment>
`;
